# Crypto-Market-Microstructure

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: btcusdt_demo.yaml  btcusdt_vol_adaptive.yaml  experiments_grid.yaml
crypto_mm_research/: __init__.py
crypto_mm_research/adapters/: __init__.py  base.py  csv_stub.py
crypto_mm_research/backtest/: __init__.py  account.py  engine.py  metrics.py  strategy.py
crypto_mm_research/cli/: __init__.py  run_backtest.py  run_experiments.py
crypto_mm_research/data/: __init__.py  events.py  loader.py  synthetic.py
crypto_mm_research/evaluation/: __init__.py  leakage.py  stability.py
crypto_mm_research/execution/: __init__.py  base.py  latency.py  naive.py  queue.py
crypto_mm_research/experiments/: __init__.py  report.py  runner.py
crypto_mm_research/features/: __init__.py  builder.py  microstructure.py
crypto_mm_research/labels/: __init__.py  alignment.py  constructor.py
crypto_mm_research/risk/: __init__.py  manager.py  switches.py
docs/: EXECUTION_MODEL.md  EXPERIMENTS.md  LEAKAGE_AND_STABILITY.md  METRICS.md
notebooks/: 01_orderbook_features_demo.py  02_market_making_backtest_demo.py  __init__.py
tests/: __init__.py
tests/integration/: test_end_to_end.py  test_latency.py
tests/unit/: test_adapters.py  test_backtest.py  test_evaluation.py  test_events.py  test_features.py  test_synthetic.py
